# scopie

./: .editorconfig  .gitattributes  .gitignore  ASICamera2.h  App.axaml  App.axaml.cs  BitmapDisplay.cs  Camera.cs  CameraControl.axaml  CameraControl.axaml.cs  CameraControl.cs  CameraControlUi.cs  CameraTab.cs  CameraThread.cs  CameraUiBag.cs  Cargo.toml  CroppableImage.cs  DebugCamera.cs  DeviceImage.cs  ExceptionReporter.cs  Ext.cs  Guider.cs  IPushEnumerable.cs  ImageIO.cs  ImageProcessor.cs  ImageToBitmapProcessor.cs  LibQhy.cs  MainTab.cs  MainWindow.axaml  MainWindow.axaml.cs  Mount.cs  Platesolver.cs  Program.cs  Qhy.cs  README.md  Scopie.csproj  Scopie.sln  TestTab.cs  Threadling.cs  UserControl1.axaml  (+5 more)
lib/: ASICamera2.h  ASICamera2.lib
qhy/: qhyccd.exp
qhy/include/: config.h  qhyccd.h  qhyccdcamdef.h  qhyccdstruct.h
qhyccd/include/: CyUSB30_def.h  config.h  qhyccd.h  qhyccdstruct.h  stdint_windows.h  timer.h
qhyccd/lib/: qhyccd.exp
qhyccd/x64/: qhyccd.exp
src/: ASICameraDll2.cs  ASICameraObjectModel2.cs  ArrayPool.cs  CameraDisplay.cs  CameraManager.cs  Dms.cs  ExposureConfig.cs  Mount.cs  MyTuple.cs  PlateSolve.cs  Program.cs  QhyCcd.cs  UserInterface.cs  UserInterfaceControl.cs  asicamera.rs  camera.rs  camera_async.rs  camera_display.rs  camera_feed.rs  display.rs  dms.rs  image_display.rs  init_script.rs  main.rs  mount.rs  mount_async.rs  mount_display.rs  platesolve.rs  process.rs  qhycamera.rs  text_input.rs
src/alg/: mod.rs  process.rs  starfinder.rs
src/camera/: camera_display.rs  display.rs  image_processor.rs  interface.rs  mod.rs  qhycamera.rs  thread.rs
src/mount/: display.rs  interface.rs  mod.rs  thread.rs
stacker/: Cargo.toml
(+17 files in other folders)
