[package]
name = "scopie"
version = "0.1.0"
authors = ["khyperia <khyperia@live.com>"]
edition = "2018"

[dependencies]
dirs = { version = "", default-features = false }
failure = { version = "", default-features = false }
gl = { version = "", default-features = false }
glutin = { version = "0.22.0-alpha3", default-features = false }
khygl = { path = "../khygl", default-features = false }
png = ""
regex = { version = "", default-features = false }
serialport = { version = "", default-features = false }
time = { version = "", default-features = false }