[package]
name = "scopie"
version = "0.1.0"
authors = ["khyperia <khyperia@live.com>"]
edition = "2018"

[dependencies]
dirs = { version = "", default-features = false }
gl = { version = "", default-features = false }
glutin = { version = "", default-features = false }
khygl = { git = "https://github.com/khyperia/khygl.git", default-features = false }
png = ""
regex = { version = "", default-features = false }
serialport = { version = "", default-features = false }
time = { version = "", default-features = false, features = ["std"] }
