[package]
name = "scopie"
version = "0.1.0"
authors = ["khyperia <khyperia@live.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
dirs = { version = "*", default-features = false }
eframe = "*"
png = "*"
regex = { version = "*", default-features = false }
serialport = { version = "*", default-features = false }
time = { version = "*", default-features = false, features = [
    "std",
    "local-offset",
    "formatting",
    "macros",
] }
